--- a/css/style.css
+++ b/css/style.css
@@ -243,9 +243,9 @@ img{
   margin: 0 65px;
   padding: 35px 40px;
 }
-.big-menu{
+/* .big-menu{
   position: relative;
-}
+} */
 .mega-menu{
   width: 100% ;
   position: absolute;
